Persistindo os dados em um arquivo parquet

--- a/analise_CNPJ.ipynb
+++ b/analise_CNPJ.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "f722d05c",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "8c24740c",
    "metadata": {},
    "outputs": [
@@ -343,6 +343,16 @@
    "metadata": {},
    "source": [
     "Para facilitar as próximas manipulações dos dados, iremos persistir esses dados em um arquivo parquet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2a407e53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_select.write.format(\"parquet\").mode(\"overwrite\").save(r\"D:\\PRJ_CNPJ\\new_data\\ETL\\Bronze\")"
    ]
   }
  ],
