--- a/analise_CNPJ.ipynb
+++ b/analise_CNPJ.ipynb
@@ -11,6 +11,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "9a360a8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init()\n",
+    "import pyspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3985115a",
    "metadata": {},
    "outputs": [],
@@ -52,17 +64,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = r\"D:\\PRJ_CNPJ\\new_data\\ETL\\RAW\\*.csv\""
+    "# Nesta pasta temos todos os arquivos brutos, da forma que vieram do site da RFB.\n",
+    "# Nomei essa pasta como RAW pois será a pasta local\n",
+    "path = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/01.RAW/*.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "id": "c4b0613f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/*.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "47c41dc2",
    "metadata": {},
    "outputs": [],
@@ -77,17 +109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "d8fc49fe",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "51091268"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "d3634244",
    "metadata": {},
    "outputs": [
@@ -109,7 +148,7 @@
        "StructType(List(StructField(_c0,StringType,true),StructField(_c1,StringType,true),StructField(_c2,StringType,true),StructField(_c3,StringType,true),StructField(_c4,StringType,true),StructField(_c5,StringType,true),StructField(_c6,StringType,true),StructField(_c7,StringType,true),StructField(_c8,StringType,true),StructField(_c9,StringType,true),StructField(_c10,StringType,true),StructField(_c11,StringType,true),StructField(_c12,StringType,true),StructField(_c13,StringType,true),StructField(_c14,StringType,true),StructField(_c15,StringType,true),StructField(_c16,StringType,true),StructField(_c17,StringType,true),StructField(_c18,StringType,true),StructField(_c19,StringType,true),StructField(_c20,StringType,true),StructField(_c21,StringType,true),StructField(_c22,StringType,true),StructField(_c23,StringType,true),StructField(_c24,StringType,true),StructField(_c25,StringType,true),StructField(_c26,StringType,true),StructField(_c27,StringType,true),StructField(_c28,StringType,true),StructField(_c29,StringType,true)))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "aadb05dd",
    "metadata": {},
    "outputs": [
@@ -160,7 +199,7 @@
        " '_c29']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "c41ef1cb",
    "metadata": {},
    "outputs": [],
@@ -219,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "b9154d13",
    "metadata": {},
    "outputs": [
@@ -258,7 +297,7 @@
        " 'dt_sit_esp']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "f722d05c",
    "metadata": {},
    "outputs": [],
@@ -296,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "8c24740c",
    "metadata": {},
    "outputs": [
@@ -342,17 +381,25 @@
    "id": "a64fe379",
    "metadata": {},
    "source": [
-    "Para facilitar as próximas manipulações dos dados, iremos persistir esses dados em um arquivo parquet"
+    "Para facilitar as próximas manipulações dos dados iremos persistir esses dados previamente limpos em uma tabela não gerenciada e carregar em uma pasta com o nome Bronze, essa pasta irá alimentar nosso bucket na GCP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "id": "2a407e53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "df_select.write.format(\"parquet\").mode(\"overwrite\").save(r\"D:\\PRJ_CNPJ\\new_data\\ETL\\Bronze\")"
+    "df_select.write.mode(\"overwrite\").option(\"path\",\"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\").saveAsTable(\"CNPJ\")"
    ]
   }
  ],
@@ -372,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
