--- a/analise_CNPJ.ipynb
+++ b/analise_CNPJ.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "9a360a8b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3985115a",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
@@ -76,25 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c4b0613f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/*.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "47c41dc2",
    "metadata": {},
    "outputs": [],
@@ -386,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "2a407e53",
    "metadata": {},
    "outputs": [
@@ -400,6 +382,28 @@
    ],
    "source": [
     "df_select.write.mode(\"overwrite\").option(\"path\",\"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\").saveAsTable(\"CNPJ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d4a3022e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51091268"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fazendo um select apenas para confirmar que a tabela foi gerada\n",
+    "spark.sql(\"SELECT * FROM CNPJ\").count()"
    ]
   }
  ],
