organizando os arquivos

--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "spark = SparkSession.builder.master(\"local\").\\\n",
-    "    appName(\"CNPJ\").\\\n",
+    "    appName(\"CNPJ_RAW\").\\\n",
     "        config(\"spark.executer.memory\",\"1gb\").\\\n",
     "            getOrCreate()"
    ]
@@ -70,7 +70,6 @@
    "outputs": [],
    "source": [
     "# Nesta pasta temos todos os arquivos brutos, da forma que vieram do site da RFB.\n",
-    "# Nomei essa pasta como RAW pois será a pasta local\n",
     "path = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/01.RAW/*.csv\""
    ]
   },
@@ -402,7 +401,7 @@
     }
    ],
    "source": [
-    "# fazendo um select apenas para confirmar que a tabela foi gerada\n",
+    "# fazendo um select para confirmar que a tabela foi gerada e contando quantos registros possuem\n",
     "spark.sql(\"SELECT * FROM CNPJ\").count()"
    ]
   }
