incrementando o tratamento Bronze

--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 94,
    "id": "9a360a8b",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 96,
    "id": "3985115a",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
@@ -75,22 +75,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "id": "47c41dc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "csv_to_DF = spark.read.format(\"csv\")\\\n",
     "    .option(\"delimiter\",\";\")\\\n",
     "        .option(\"enconding\",\"ISO-8859-1\")\\\n",
     "            .option(\"header\",\"False\")\\\n",
-    "                .option(\"inferSchame\",\"True\")\\\n",
+    "                .option(\"inferSchema\",\"True\")\\\n",
     "                    .load(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "id": "d8fc49fe",
    "metadata": {},
    "outputs": [
@@ -107,7 +115,7 @@
        "51091268"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,29 +127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "id": "d3634244",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StructType(List(StructField(_c0,StringType,true),StructField(_c1,StringType,true),StructField(_c2,StringType,true),StructField(_c3,StringType,true),StructField(_c4,StringType,true),StructField(_c5,StringType,true),StructField(_c6,StringType,true),StructField(_c7,StringType,true),StructField(_c8,StringType,true),StructField(_c9,StringType,true),StructField(_c10,StringType,true),StructField(_c11,StringType,true),StructField(_c12,StringType,true),StructField(_c13,StringType,true),StructField(_c14,StringType,true),StructField(_c15,StringType,true),StructField(_c16,StringType,true),StructField(_c17,StringType,true),StructField(_c18,StringType,true),StructField(_c19,StringType,true),StructField(_c20,StringType,true),StructField(_c21,StringType,true),StructField(_c22,StringType,true),StructField(_c23,StringType,true),StructField(_c24,StringType,true),StructField(_c25,StringType,true),StructField(_c26,StringType,true),StructField(_c27,StringType,true),StructField(_c28,StringType,true),StructField(_c29,StringType,true)))"
+       "StructType(List(StructField(_c0,IntegerType,true),StructField(_c1,IntegerType,true),StructField(_c2,IntegerType,true),StructField(_c3,IntegerType,true),StructField(_c4,StringType,true),StructField(_c5,StringType,true),StructField(_c6,IntegerType,true),StructField(_c7,IntegerType,true),StructField(_c8,StringType,true),StructField(_c9,IntegerType,true),StructField(_c10,IntegerType,true),StructField(_c11,StringType,true),StructField(_c12,StringType,true),StructField(_c13,StringType,true),StructField(_c14,StringType,true),StructField(_c15,StringType,true),StructField(_c16,StringType,true),StructField(_c17,StringType,true),StructField(_c18,StringType,true),StructField(_c19,StringType,true),StructField(_c20,StringType,true),StructField(_c21,StringType,true),StructField(_c22,StringType,true),StructField(_c23,StringType,true),StructField(_c24,StringType,true),StructField(_c25,StringType,true),StructField(_c26,StringType,true),StructField(_c27,StringType,true),StructField(_c28,StringType,true),StructField(_c29,StringType,true)))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Printando o Schema que o Spark inferiou\n",
+    "# Deixamos que o Spark inferisse o Schema pois não vamos precisar de toda as colunas nos próximos passos.\n",
+    "# Após a seleção das colunas que iremos realmente usar, faremos essa etapa do tratamento, formatando as colunas de datas, por exemplo.\n",
     "csv_to_DF.schema"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 101,
    "id": "aadb05dd",
    "metadata": {},
    "outputs": [
@@ -180,7 +189,7 @@
        " '_c29']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 102,
    "id": "c41ef1cb",
    "metadata": {},
    "outputs": [],
@@ -239,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 103,
    "id": "b9154d13",
    "metadata": {},
    "outputs": [
@@ -278,7 +287,7 @@
        " 'dt_sit_esp']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "id": "f722d05c",
    "metadata": {},
    "outputs": [],
@@ -316,45 +325,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "8c24740c",
+   "execution_count": 105,
+   "id": "4e5b1a64",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+--------------------+-------+--------------------+----+--------------------+--------------------+--------+---+---------+\n",
-      "|CNPJ_basico|id_matriz_filial|       nome_fantasia|sit_cad|  dt_cad|mt_sit_cad|dt_inicio_at|cnae_principal|     cnae_secundario| tp_log|                 log|  nm|                comp|              bairro|     CEP| UF|municipio|\n",
-      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+--------------------+-------+--------------------+----+--------------------+--------------------+--------+---+---------+\n",
-      "|   11124181|               1|        WOG MADEIRAS|     04|20181017|        63|    20090908|       4744002|             4671100|    RUA| 10 CHACARA 148 LOTE|  06|LOJA  01         ...|          TAGUATINGA|72110800| DF|     9701|\n",
-      "|   11124191|               1|            PRN RUAS|     04|20190328|        63|    20090909|       4930201|                null|AVENIDA|AVENIDA EUCLIDES ...|  SN|  LOTE  34 QUADRA 34|       VILA SAO JOAO|25570162| RJ|     5901|\n",
-      "|   02180764|               2|                null|     08|20151208|        01|    20090909|       4784900|                null|    RUA|ROMARIO DE AZERED...|  50|       LOTE  18 QD H|        MANGUEIRINHA|28800000| RJ|     5885|\n",
-      "|   11124219|               1|   LAVA JATO ALIANCA|     08|20170511|        01|    20090908|       4520005|                null| QUADRA| SHCS SQ 107 BLOCO A| S/N|      PAG        ...|             ASA SUL|70346500| DF|     9701|\n",
-      "|   11124231|               1|VIVARTE EVENTOS E...|     04|20210226|        63|    20090903|       8230001|                null|    RUA|PROFESSOR ANIBAL ...|  64|                null|    JARDIM SAO JORGE|04432060| SP|     7107|\n",
-      "|   11124243|               1|                null|     04|20210226|        63|    20090813|       4759899|             4772500|    RUA|           SAO CELSO| 253|                : B;|       VILA DOMITILA|03626000| SP|     7107|\n",
-      "|   11124254|               1|         ULTIMO GOLE|     04|20180828|        63|    20090902|       9329801|5611204,5611203,5...|AVENIDA|     GABRIEL ZANETTE|1500|                null|               CEARA|88815060| SC|     8089|\n",
-      "|   11124266|               1|                null|     08|20210826|        01|    20090902|       8630504|     3250706,8640205|    RUA|DJANIRA MARIA BASTOS|1497|          : 1 ANDAR;|                CAJI|42700130| BA|     3685|\n",
-      "|   04591749|               2|          A CICLISTA|     02|20090910|        00|    20090910|       4763603|             4530705|    RUA|          LENINGRADO| 114|      QD 237     ...|         NOVA CIDADE|69097234| AM|     0255|\n",
-      "|   11124289|               1|      ESCOLA DOM UNO|     02|20090812|        00|    20090812|       8512100|             8513900|    RUA|    DONA MARIA LEITE| 197|                null|       VILA NOGUEIRA|09960450| SP|     6377|\n",
-      "|   11124304|               1|          PAO DE MEL|     02|20090909|        00|    20090909|       1091101|4637104,4637101,4...|    RUA|        INACIO TALON| 136|               E 140|MORRO DO COCO, 12...|28178000| RJ|     5819|\n",
-      "|   11124314|               1|         SSR IMOVEIS|     04|20180925|        63|    20090828|       4110700|             4120400|    RUA|        CAPITAO CRUZ| 328|                null|        VISTA ALEGRE|21250520| RJ|     6001|\n",
-      "|   11124330|               1|                null|     02|20090908|        00|    20090908|       8230001|     6319400,6311900|    RUA|     CLIMACO BARBOSA| 301|                null|             CAMBUCI|01523000| SP|     7107|\n",
-      "|   11124346|               1|L. APARECIDA DE F...|     01|20090910|        70|    20090910|       9602501|                null|    RUA|            SAO JOSE| 375|EDIF: SHOPPING SA...|              CENTRO|36500001| MG|     5397|\n",
-      "|   10832936|               2|                null|     08|20130208|        01|    20090813|       6622300|                null|    RUA|            PACAEMBU|  47|                null|   JARDIM PAULISTANO|18040710| SP|     7145|\n",
-      "|   20295586|               1|     RODRIGO CANDIDO|     08|20160128|        01|    20140521|       7319002|4520005,9609299,4...|AVENIDA|   JOAQUIM MAGALHAES| 180|    BLOCO 16;APT 204| SENADOR VASCONCELOS|23012120| RJ|     6001|\n",
-      "|   11124389|               1|ROSSI TRANSPORTES...|     02|20090910|        00|    20090910|       4923001|             4772500|    RUA|LUCIA FORECHI NIC...|  88|                null|       SANTO ANTONIO|29704025| ES|     5629|\n",
-      "|   11124405|               1|         VELOXCIDADE|     04|20181024|        63|    20090909|       6110803|     6190601,4751201|    RUA|LEONARDO SALES DE...| 006|          SOBRE LOJA|            VALVERDE|26290816| RJ|     5869|\n",
-      "|   11124418|               1|                null|     02|20090910|        00|    20090910|       7490199|5811500,5911199,7...|ESTRADA|               SIMON|S/N?|            SALA  02|            INTERIOR|89760000| SC|     8157|\n",
-      "|   11124430|               1|WALTER CHURRASQUE...|     04|20181023|        63|    20090902|       4744099|                null|    RUA|             BELGICA| 805|                null|        JARDIM IGAPO|86046280| PR|     7667|\n",
-      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+--------------------+-------+--------------------+----+--------------------+--------------------+--------+---+---------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "StructType(List(StructField(CNPJ_basico,IntegerType,true),StructField(id_matriz_filial,IntegerType,true),StructField(nome_fantasia,StringType,true),StructField(sit_cad,StringType,true),StructField(dt_cad,IntegerType,true),StructField(mt_sit_cad,IntegerType,true),StructField(dt_inicio_at,IntegerType,true),StructField(cnae_principal,StringType,true),StructField(cnae_secundario,StringType,true),StructField(tp_log,StringType,true),StructField(log,StringType,true),StructField(nm,StringType,true),StructField(comp,StringType,true),StructField(bairro,StringType,true),StructField(CEP,StringType,true),StructField(UF,StringType,true),StructField(municipio,StringType,true)))"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_select.show()"
+    "df_select.schema"
    ]
   },
   {
@@ -362,12 +349,12 @@
    "id": "a64fe379",
    "metadata": {},
    "source": [
-    "Para facilitar as próximas manipulações dos dados iremos persistir esses dados previamente limpos em uma tabela não gerenciada e carregar em uma pasta com o nome Bronze, essa pasta irá alimentar nosso bucket na GCP"
+    "Para facilitar as próximas manipulações dos dados iremos persistir esses dados previamente limpos em um arquivo parquet e carregar em uma pasta com o nome Bronze, após esse passo, continuaremos efetuando alguns tratamentos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "id": "2a407e53",
    "metadata": {},
    "outputs": [
@@ -380,29 +367,17 @@
     }
    ],
    "source": [
-    "df_select.write.mode(\"overwrite\").option(\"path\",\"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\").saveAsTable(\"CNPJ\")"
+    "df_select.write.mode(\"overwrite\").save(\"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "d4a3022e",
+   "execution_count": 107,
+   "id": "553b2028",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "51091268"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# fazendo um select para confirmar que a tabela foi gerada e contando quantos registros possuem\n",
-    "spark.sql(\"SELECT * FROM CNPJ\").count()"
+    "spark.stop()"
    ]
   }
  ],
